--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -210,9 +210,14 @@
             //Color Styling
             color: $background-color-dark;
 
+            @media only screen and (max-width: $bp-medium) {
+                //Spacing
+                margin: 3.5rem 2rem 0;
+            }
+
             @media only screen and (max-width: $bp-small) {
                 //Spacing
-                margin: 4rem 3rem;
+                margin: 4rem 3rem 1rem;
             }
         }
     }
